fixed blank space (right) on mobile version

--- a/css/queries.css
+++ b/css/queries.css
@@ -47,7 +47,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    transform: translateX(100%);
+    padding-right: 50px;
 
     display: flex;
     align-items: center;
